updated code for loading dark mode fixed and also in district court order and judgement copy error showing fixed

--- a/public/passets/style.css
+++ b/public/passets/style.css
@@ -835,15 +835,6 @@ label{
 /* DARK MODE STYLES  */
 
 
-
-
-
-
-
-
-
-
-
 body.dark-mode {
     transition: background-color 350ms ease-in-out, color 350ms ease-in-out;
     background-color: #202020;
@@ -852,6 +843,11 @@ body.dark-mode {
 
 body.dark-mode .main-top {
     background-color: #2c2c2c;
+    transition: background-color 350ms ease-in-out;
+}
+
+body.dark-mode #loading-spinner {
+    background-color: #202020;
     transition: background-color 350ms ease-in-out;
 }
 
